add close selinux

--- a/_posts/2022-01-04-MyConfig.md
+++ b/_posts/2022-01-04-MyConfig.md
@@ -43,14 +43,14 @@ tags:
 #### MySQL 配置
 
 1. 设置密码安全等级 Low、长度(不建议)
-
+   
    ```mysql
    set global validate_password_policy=0;
    set global validate_password_length=1;
    ```
 
 2. 修改密码、开放 root 远程登陆
-
+   
    ```mysql
    grant all priviset password for root@localhost=password('123456');
    grant all privileges on *.* to 'root' @'%' identified by '123456';
@@ -73,3 +73,16 @@ firewall-cmd --reload
 # 移除指定端口：
 firewall-cmd --permanent --remove-port=3306/tcp
 ```
+
+#### 关闭SELinux
+1. 临时关闭
+   
+   ```shell
+   setenforce 0
+   ```
+
+2. 永久关闭
+   
+   ```shell
+   sed -i 's#SELINUX=enforcing#SELINUX=disabled#g' /etc/selinux/config
+   ```
